--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
 
       <!-- Video Section-->
       <section id="video"></section>
-
+<video width="1920" height="1080" controls muted autoplay loop>
+  <source src="video/salonMatin2.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
+    <div id="blackOverlay"></div>
       <!-- Contact Section -->
       <section id="contact"></section>
 
