--- a/index.html
+++ b/index.html
@@ -1,77 +1,77 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <!--[if lt IE 9
+      ]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script
+    ><![endif]-->
+    <title></title>
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <link href="css/style.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script><![endif]-->
-  <title></title>
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <link href="css/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <nav>
+          <div class="nav-wrapper">
+            <a href="#!" class="brand-logo">Logo</a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+              ><i class="material-icons">menu</i></a
+            >
+            <ul class="right hide-on-med-and-down">
+              <li><a href="sass.html">Sass</a></li>
+              <li><a href="badges.html">Components</a></li>
+              <li><a href="collapsible.html">Javascript</a></li>
+              <li><a href="mobile.html">Mobile</a></li>
+            </ul>
+          </div>
+        </nav>
 
-</head>
+        <ul class="sidenav" id="mobile-demo">
+          <li><a href="sass.html">Sass</a></li>
+          <li><a href="badges.html">Components</a></li>
+          <li><a href="collapsible.html">Javascript</a></li>
+          <li><a href="mobile.html">Mobile</a></li>
+        </ul>
+      </header>
+      <!-- .header-->
 
-<body>
+      <main class="content">
+        <!-- Video Section-->
+        <section id="video">
+          <video width="1920" height="1080" controls muted autoplay loop>
+            <source src="video/salonMatin2.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video>
+          <div id="blackOverlay"></div>
+        </section>
+        <!-- Contact Section -->
+        <section id="contact"></section>
 
-  <div class="wrapper">
+        <!-- Prices & Services Section -->
+        <section id="prices_services"></section>
 
-    <header class="header">
-      <nav>
-        <div class="nav-wrapper">
-          <a href="#!" class="brand-logo">Logo</a>
-          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-          <ul class="right hide-on-med-and-down">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">Javascript</a></li>
-            <li><a href="mobile.html">Mobile</a></li>
-          </ul>
-        </div>
-      </nav>
+        <!-- Gallery & Reviews Section -->
+        <section id="gallery_reviews"></section>
 
-      <ul class="sidenav" id="mobile-demo">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">Javascript</a></li>
-        <li><a href="mobile.html">Mobile</a></li>
-      </ul>
+        <!-- About Section -->
+        <section id="about"></section>
 
+        <!-- Booking Section -->
+        <section id="booking"></section>
+      </main>
+      <!-- .content -->
 
-    </header><!-- .header-->
-
-    <main class="content">
-
-      <!-- Video Section-->
-      <section id="video"></section>
-<video width="1920" height="1080" controls muted autoplay loop>
-  <source src="video/salonMatin2.mp4" type="video/mp4">
-Your browser does not support the video tag.
-</video>
-    <div id="blackOverlay"></div>
-      <!-- Contact Section -->
-      <section id="contact"></section>
-
-      <!-- Prices & Services Section -->
-      <section id="prices_services"></section>
-
-      <!-- Gallery & Reviews Section -->
-      <section id="gallery_reviews"></section>
-
-      <!-- About Section -->
-      <section id="about"></section>
-
-      <!-- Booking Section -->
-      <section id="booking"></section>
-
-    </main><!-- .content -->
-
-    <footer class="footer">
-
-    </footer><!-- .footer -->
-
-  </div><!-- .wrapper -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</body>
-
+      <footer class="footer"></footer>
+      <!-- .footer -->
+    </div>
+    <!-- .wrapper -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  </body>
 </html>
