--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title></title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
+    <link rel="stylesheet" href="https://use.typekit.net/ttr3wco.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Cinzel:400,700,900&display=swap"
+      rel="stylesheet"
+    />
     <link href="css/style.css" rel="stylesheet" />
     <link
       rel="stylesheet"
@@ -51,6 +56,7 @@
           </video>
           <div id="blackOverlay"></div>
         </section>
+
         <!-- Contact Section -->
         <section id="contact"></section>
 
