--- a/index.html
+++ b/index.html
@@ -58,7 +58,40 @@
         </section>
 
         <!-- Contact Section -->
-        <section id="contact"></section>
+        <section id="contact">
+          <div class="row">
+            <div class="col s12 l4">
+              <div class="card">
+                <div class="card-content">
+                  <span class="card-title">BOOK VIA PHONE</span>
+                  <p>
+                    +45 86 19 44 09
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 l4">
+              <div class="card">
+                <div class="card-content">
+                  <span class="card-title">BOOK VIA PHONE</span>
+                  <p>
+                    +45 86 19 44 09
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 l4">
+              <div class="card">
+                <div class="card-content">
+                  <span class="card-title">BOOK VIA PHONE</span>
+                  <p>
+                    +45 86 19 44 09
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
 
         <!-- Prices & Services Section -->
         <section id="prices_services"></section>
