--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
       <main class="content">
         <!-- Video Section-->
         <section id="video">
-          <video width="1920" height="1080" controls muted autoplay loop>
+          
+          <div><video controls muted autoplay loop>
             <source src="video/salonMatin2.mp4" type="video/mp4" />
             Your browser does not support the video tag.
-          </video>
-          <div id="blackOverlay"></div>
+          </video><div id="blackOverlay"></div></div>
         </section>
         <!-- Contact Section -->
         <section id="contact"></section>
