--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <div><video controls muted autoplay loop>
             <source src="video/salonMatin2.mp4" type="video/mp4" />
             Your browser does not support the video tag.
-          </video></div>
+          </video><img class="centered" src="img/logo-smatin.png"></div>
         </section>
 
         <!-- Contact Section -->
