Changed CSS for Cards

--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
       <main class="content">
         <!-- Video Section-->
         <section id="video">
-          
-          <div><video controls muted autoplay loop>
-            <source src="video/salonMatin2.mp4" type="video/mp4" />
-            Your browser does not support the video tag.
-          </video><img class="centered" src="img/logo-smatin.png"></div>
+          <div></div>
+            <video controls muted autoplay loop>
+              <source src="video/salonMatin2.mp4" type="video/mp4" />
+              Your browser does not support the video tag.</video
+            ><img class="centered" src="img/logo-smatin.png" />
+          </div>
         </section>
 
         <!-- Contact Section -->
@@ -71,7 +72,7 @@
               </div>
             </div>
             <div class="col s12 l4">
-              <div class="card">
+              <div class="card card_border">
                 <div class="card-content">
                   <span class="card-title">BOOK VIA PHONE</span>
                   <p>
