--- a/index.html
+++ b/index.html
@@ -9,88 +9,87 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <link rel="stylesheet" href="https://use.typekit.net/ttr3wco.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Cinzel:400,700,900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700,900&display=swap" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-  </head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+</head>
 
-  <body>
-    <div class="wrapper">
-      <header class="header">
+<body>
+
+    <header class="header">
         <nav>
-          <div class="nav-wrapper">
-            <a href="#!" class="brand-logo">Logo</a>
-            <a href="#" data-target="mobile-demo" class="sidenav-trigger"
-              ><i class="material-icons">menu</i></a
-            >
-            <ul class="right hide-on-med-and-down">
-              <li><a href="sass.html">Sass</a></li>
-              <li><a href="badges.html">Components</a></li>
-              <li><a href="collapsible.html">Javascript</a></li>
-              <li><a href="mobile.html">Mobile</a></li>
-            </ul>
-          </div>
+            <div class="nav-wrapper">
+                <a href="#!" class="brand-logo">Logo</a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="sass.html">Sass</a></li>
+                    <li><a href="badges.html">Components</a></li>
+                    <li><a href="collapsible.html">Javascript</a></li>
+                    <li><a href="mobile.html">Mobile</a></li>
+                </ul>
+            </div>
         </nav>
 
         <ul class="sidenav" id="mobile-demo">
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">Javascript</a></li>
-          <li><a href="mobile.html">Mobile</a></li>
+            <li><a href="sass.html">Sass</a></li>
+            <li><a href="badges.html">Components</a></li>
+            <li><a href="collapsible.html">Javascript</a></li>
+            <li><a href="mobile.html">Mobile</a></li>
         </ul>
-      </header>
-      <!-- .header-->
+    </header>
+    <!-- .header-->
 
-      <main class="content">
+    <main class="content">
         <!-- Video Section-->
         <section id="video">
-          
-          <div><video controls muted autoplay loop>
-            <source src="video/salonMatin2.mp4" type="video/mp4" />
-            Your browser does not support the video tag.
-          </video><img class="centered" src="img/logo-smatin.png"></div>
+
+            <video controls muted autoplay loop>
+                <source src="video/salonMatin2.mp4" type="video/mp4" />
+                Your browser does not support the video tag.
+            </video>
+            <div id="videoLogo" class="row">
+                    <div class="col l8 offset-l4"><img class="videoLogo" src="img/logo-smatin.png"></div>
+                    <div class="col l4 offset-l4">
+                        <p>Here at Salon Matin we make sure to give the best services at an affordable price</p>
+                    </div>
+    
+            </div>
         </section>
 
         <!-- Contact Section -->
         <section id="contact">
-          <div class="row">
-            <div class="col s12 l4">
-              <div class="card">
-                <div class="card-content">
-                  <span class="card-title">BOOK VIA PHONE</span>
-                  <p>
-                    +45 86 19 44 09
-                  </p>
+            <div class="row">
+                <div class="col s12 l4">
+                    <div class="card">
+                        <div class="card-content">
+                            <span class="card-title">BOOK VIA PHONE</span>
+                            <p>
+                                +45 86 19 44 09
+                            </p>
+                        </div>
+                    </div>
                 </div>
-              </div>
-            </div>
-            <div class="col s12 l4">
-              <div class="card">
-                <div class="card-content">
-                  <span class="card-title">BOOK VIA PHONE</span>
-                  <p>
-                    +45 86 19 44 09
-                  </p>
+                <div class="col s12 l4">
+                    <div class="card">
+                        <div class="card-content">
+                            <span class="card-title">BOOK VIA PHONE</span>
+                            <p>
+                                +45 86 19 44 09
+                            </p>
+                        </div>
+                    </div>
                 </div>
-              </div>
-            </div>
-            <div class="col s12 l4">
-              <div class="card">
-                <div class="card-content">
-                  <span class="card-title">BOOK VIA PHONE</span>
-                  <p>
-                    +45 86 19 44 09
-                  </p>
+                <div class="col s12 l4">
+                    <div class="card">
+                        <div class="card-content">
+                            <span class="card-title">BOOK VIA PHONE</span>
+                            <p>
+                                +45 86 19 44 09
+                            </p>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
         </section>
 
         <!-- Prices & Services Section -->
@@ -104,13 +103,13 @@
 
         <!-- Booking Section -->
         <section id="booking"></section>
-      </main>
-      <!-- .content -->
+    </main>
+    <!-- .content -->
 
-      <footer class="footer"></footer>
-      <!-- .footer -->
-    </div>
+    <footer class="footer"></footer>
+    <!-- .footer -->
+
     <!-- .wrapper -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  </body>
+</body>
 </html>
