--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
                 <div class="card-content">
                   <span class="card-title">BOOK VIA PHONE</span>
                   <p>
+                      <br>
                     +45 86 19 44 09
+                    <br>
+                    
                   </p>
                 </div>
               </div>
@@ -74,9 +77,12 @@
             <div class="col s12 l4">
               <div class="card card_border">
                 <div class="card-content">
-                  <span class="card-title">BOOK VIA PHONE</span>
+                  <span class="card-title">ADDRESS</span>
                   <p>
-                    +45 86 19 44 09
+                      <br>
+                    Frederiks allé 176
+ 8000 Århus C
+ <br>
                   </p>
                 </div>
               </div>
@@ -84,9 +90,12 @@
             <div class="col s12 l4">
               <div class="card">
                 <div class="card-content">
-                  <span class="card-title">BOOK VIA PHONE</span>
+                  <span class="card-title">OPENING HOURS</span>
                   <p>
-                    +45 86 19 44 09
+                    Monday - Friday         9:30 - 18 <br>
+                    Saturday                9:00 - 14 <br>
+                    Sunday                  closed <br>
+
                   </p>
                 </div>
               </div>
@@ -95,7 +104,27 @@
         </section>
 
         <!-- Prices & Services Section -->
-        <section id="prices_services"></section>
+        <section id="prices_services">
+
+          <h1>PRICES & SERVICES</h1>
+          <div class="row">
+          <div class="col s12 m7">
+              <div class="card horizontal ">
+                <div class="card-image">
+                  <img src="https://lorempixel.com/100/190/nature/6">
+                </div>
+                <div class="card-stacked">
+                  <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information.</p>
+                  </div>
+                  <div class="card-action">
+                    <p>100DKK</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+        </section>
 
         <!-- Gallery & Reviews Section -->
         <section id="gallery_reviews"></section>
