--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div id="videoLogo" class="row">
                     <div class="col l8 offset-l4"><img class="videoLogo" src="img/logo-smatin.png"></div>
                     <div class="col l4 offset-l4">
-                        <p>Here at Salon Matin we make sure to give the best services at an affordable price</p>
+                        <h2>Here at Salon Matin we make sure to give the best services at an affordable price</h2>
                     </div>
 
             </div>
@@ -97,6 +97,8 @@
                   </p>
                 </div>
             </div>
+              </div>
+            </div>
         </section>
 
         <!-- Prices & Services Section -->
@@ -118,6 +120,7 @@
                   </div>
                 </div>
               </div>
+            </div>
             </div>
 
         </section>
