edward told me to push so here it is :)

--- a/index.html
+++ b/index.html
@@ -17,18 +17,21 @@
 <body>
 
     <header class="header">
+       <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper">
-                <a href="#!" class="brand-logo">Logo</a>
+                <a href="#!" class="brand-logo"><img src="img/logo-smatin1.svg"></a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="sass.html">Sass</a></li>
-                    <li><a href="badges.html">Components</a></li>
-                    <li><a href="collapsible.html">Javascript</a></li>
-                    <li><a href="mobile.html">Mobile</a></li>
+                    <li><a href="sass.html">CONTACT</a></li>
+                    <li><a href="badges.html">PRIVES & SERVICES</a></li>
+                    <li><a href="collapsible.html">GALLERY & REVIEWS</a></li>
+                    <li><a href="mobile.html">ABOUT</a></li>
+                    <li><a class="waves-effect waves-light btn">Booking</a></li>
                 </ul>
             </div>
         </nav>
+        </div>
 
         <ul class="sidenav" id="mobile-demo">
             <li><a href="sass.html">Sass</a></li>
@@ -48,9 +51,10 @@
                 Your browser does not support the video tag.
             </video>
             <div id="videoLogo" class="row">
-                    <div class="col l8 offset-l4"><img class="videoLogo" src="img/logo-smatin.png"></div>
-                    <div class="col l6 offset-l3">
+                    <div class="col l8 offset-l4"><img class="videoLogo hide-on-small-only	" src="img/logo-smatin.png"></div>
+                    <div class="col l6 offset-l3 swag">
                         <h2>Here at Salon Matin we make sure to give the best services at an affordable price</h2>
+                        <a class="waves-effect waves-light btn">Booking</a>
                     </div>
 
             </div>
