--- a/index.html
+++ b/index.html
@@ -77,8 +77,6 @@
                 </div>
               </div>
             </div>
-          </div>
-        </div>
         <div class="col s12 l4">
           <div class="card card_border">
             <div class="card-content">
@@ -112,7 +110,11 @@
     <!-- Prices & Services Section -->
     <section id="prices_services">
       <h1>PRICES & SERVICES</h1>
+      <div class="row">
+        <div class="col s12 l6">
 
+        </div>
+      </div>
     </section>
 
     <!-- Gallery & Reviews Section -->
