about company page

--- a/index.html
+++ b/index.html
@@ -129,7 +129,25 @@
         <section id="gallery_reviews"></section>
 
         <!-- About Section -->
-        <section id="about"></section>
+        <section id="about">
+          <h1 class="aboutC">ABOUT COMPANY</h1>
+          <div class="row">
+          <div class="col l7 s12 pleaseNoPadding"><img src="img/company.png" alt="" id="company"></div>
+          <div class="col l5 s12"><h2 id="goodService">GOOD SERVICE WITH REASONABLE PRICE!</h2>
+          <p id="descr">Salon MATIN in Århus C is centrally located on Frederiks Allé 176. That is, you can easily
+            and quickly take public transport right to your door. We have bicycle parking and if you are
+            in the car there is ample opportunity for free parking close to Salon MATIN. <br><br>
+            We offer men's, women's and children's haircuts, and strive to provide the best service by
+            listening to your wishes, and are happy to make suggestions for the haircut. <br><br>Our greatest reward
+            is the joy our customers exude as they leave the salon with a result they are happy and proud of.
+            Salon MATIN is a cheap hairdresser in Aarhus and the quality is always top notch.<br><br>
+            In addition to cutting, we also offer various hair products including ID Wax as well as Attitude Wax.
+            If you are looking for a good cheap hairdresser at Frederiksbjerg in the heart of Aarhus, and
+            want high quality and professional treatment, you are very welcome to contact us.
+          </p></div>
+
+          </div>
+        </section>
 
         <!-- Booking Section -->
         <section id="booking"></section>
