--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
             Salon MATIN is a cheap hairdresser in Aarhus and the quality is always top notch.<br><br>
             In addition to cutting, we also offer various hair products including ID Wax as well as Attitude Wax.
             If you are looking for a good cheap hairdresser at Frederiksbjerg in the heart of Aarhus, and
-            want high quality and professional treatment, you are very welcome to contact us.
-          </p></div>
+            want high quality and professional treatment, you are very welcome to</p> <a id="contactUs" href="#contact"> contact us.</a>
+          </div>
 
           </div>
         </section>
