--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     <!-- Video Section-->
     <section id="video">
 
-      <video controls muted autoplay loop>
+      <video class="responsive-video" controls muted autoplay loop>
         <source src="video/salonMatin2.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
       <div id="videoLogo" class="row">
-        <div class="col l8 offset-l4"><img class="videoLogo hide-on-small-only	" src="img/logo-smatin.png"></div>
+        <div class="col l8 offset-l4"><img class="videoLogo show-on-large" src="img/logo-smatin.png"></div>
         <div class="col l6 offset-l3 swag">
           <h2>Here at Salon Matin we make sure to give the best services at an affordable price</h2>
           <a class="waves-effect waves-light btn">Booking</a>
