--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Video Section-->
     <section id="video">
 
-      <video class="responsive-video" controls muted autoplay loop>
+      <video class="responsive-video" muted autoplay loop>
         <source src="video/salonMatin2.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
