--- a/index.html
+++ b/index.html
@@ -235,8 +235,14 @@
           </div>
         </section>
 
+        <!-- Where to find us Section -->
+        <section id="booking">
+          <h1 id="findUs">WHERE YOU CAN FIND US</h1>
+        </section>
+
     <!-- Booking Section -->
     <section id="booking"></section>
+
   </main>
   <!-- .content -->
 
