--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
         <div class="col s12 l6">
           <div class="card horizontal">
             <div class="card-image">
-              <img class="img_services" src="img/razor.png">
+              <img class="img_services" src="img/hair.png">
             </div>
             <div class="card-stacked">
               <div class="card-content">
-                <span class="card-title">HAIRCUT WITH THE MACHINE AND SCCISSORS</span>
+                <span class="card-title">HAIRCUT WITH THE MACHINE AND SCISSORS</span>
               </div>
               <div class="card-action">
                 <p>120 kr</p>
@@ -147,11 +147,11 @@
 <div class="col s12 l6">
   <div class="card horizontal">
     <div class="card-image">
-      <img class="img_services" src="img/razor.png">
+      <img class="img_services" src="img/scrissors.png">
     </div>
     <div class="card-stacked">
       <div class="card-content">
-        <span class="card-title">HAIRCUT WITH THE SCCISSORS ONLY</span>
+        <span class="card-title">HAIRCUT WITH THE SCISSORS ONLY</span>
       </div>
       <div class="card-action">
         <p>150 kr</p>
@@ -163,7 +163,7 @@
 <div class="col s12 l6">
   <div class="card horizontal">
     <div class="card-image">
-      <img class="img_services" src="img/razor.png">
+      <img class="img_services" src="img/woman.png">
     </div>
     <div class="card-stacked">
       <div class="card-content">
@@ -179,11 +179,11 @@
 <div class="col s12 l6">
   <div class="card horizontal">
     <div class="card-image">
-      <img class="img_services" src="img/razor.png">
+      <img class="img_services" src="img/yellow_razor.png">
     </div>
     <div class="card-stacked">
       <div class="card-content">
-        <span class="card-title">BARBERING</span>
+        <span class="card-title">BEARD TRIM & BARBERING</span>
       </div>
       <div class="card-action">
         <p>50 kr</p>
@@ -195,7 +195,7 @@
 <div class="col s12 l6">
   <div class="card horizontal">
     <div class="card-image">
-      <img class="img_services" src="img/razor.png">
+      <img class="img_services" src="img/kid.png">
     </div>
     <div class="card-stacked">
       <div class="card-content">
@@ -212,7 +212,41 @@
     </section>
 
     <!-- Gallery & Reviews Section -->
-    <section id="gallery_reviews"></section>
+    <section id="gallery_reviews">
+<h1>GALLERY & REVIEWS</h1>
+
+<div class="row">
+  <div class="col s12 m6 l4">
+    <img src="img/company.png" class="responsive-img card materialbox" alt="">
+  </div>
+  <div class="col s12 m6 l4">
+    <img src="img/company.png" class="responsive-img card materialbox" alt="">
+  </div>
+  <div class="col s12 m6 l4">
+    <img src="img/company.png" class="responsive-img card materialbox" alt="">
+  </div>
+  <div class="col s12 m6 l4">
+    <img src="img/company.png" class="responsive-img card materialbox" alt="">
+  </div>
+  <div class="col s12 m6 l4">
+    <img src="img/company.png" class="responsive-img card materialbox" alt="">
+  </div>
+  <div class="col s12 m6 l4">
+    <img src="img/company.png" class="responsive-img card materialbox" alt="">
+  </div>
+  <div class="col s12 m6 l4">
+    <img src="img/company.png" class="responsive-img card materialbox" alt="">
+  </div>
+  <div class="col s12 m6 l4">
+    <img src="img/company.png" class="responsive-img card materialbox" alt="">
+  </div>
+  <div class="col s12 m6 l4">
+
+  </div>
+</div>
+
+
+    </section>
 
         <!-- About Section -->
         <section id="about">
