--- a/index.html
+++ b/index.html
@@ -215,30 +215,30 @@
     <section id="gallery_reviews">
 <h1>GALLERY & REVIEWS</h1>
 
-<div class="row">
+<div class="row container_gallery">
   <div class="col s12 m6 l4">
-    <img src="img/company.png" class="responsive-img card materialbox" alt="">
+    <img src="img/gallery1.jpg" class="responsive-img card materialbox" alt="">
   </div>
   <div class="col s12 m6 l4">
-    <img src="img/company.png" class="responsive-img card materialbox" alt="">
+    <img src="img/gallery2.jpg" class="responsive-img card materialbox" alt="">
   </div>
   <div class="col s12 m6 l4">
-    <img src="img/company.png" class="responsive-img card materialbox" alt="">
+    <img src="img/gallery3.jpg" class="responsive-img card materialbox" alt="">
   </div>
   <div class="col s12 m6 l4">
-    <img src="img/company.png" class="responsive-img card materialbox" alt="">
+    <img src="img/gallery4.jpg" class="responsive-img card materialbox" alt="">
   </div>
   <div class="col s12 m6 l4">
-    <img src="img/company.png" class="responsive-img card materialbox" alt="">
+    <img src="img/gallery5.jpg" class="responsive-img card materialbox" alt="">
   </div>
   <div class="col s12 m6 l4">
-    <img src="img/company.png" class="responsive-img card materialbox" alt="">
+    <img src="img/gallery6.jpg" class="responsive-img card materialbox" alt="">
   </div>
   <div class="col s12 m6 l4">
-    <img src="img/company.png" class="responsive-img card materialbox" alt="">
+    <img src="img/gallery7.jpg" class="responsive-img card materialbox" alt="">
   </div>
   <div class="col s12 m6 l4">
-    <img src="img/company.png" class="responsive-img card materialbox" alt="">
+    <img src="img/gallery8.jpg" class="responsive-img card materialbox" alt="">
   </div>
   <div class="col s12 m6 l4">
 
