--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
   <meta name="description" content="" />
   <link rel="stylesheet" href="https://use.typekit.net/ttr3wco.css" />
   <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700,900&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.css">
+<link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
   <link href="css/style.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+
 </head>
 
 <body>
@@ -245,6 +248,34 @@
   </div>
 </div>
 
+<div class="swiper-container">
+  <div class="swiper-wrapper">
+    <div class="swiper-slide slide1">
+    </div>
+    <div class="swiper-slide slide2">
+    </div>
+    <div class="swiper-slide slide3">
+    </div>
+    <div class="swiper-slide slide4">
+    </div>
+    <div class="swiper-slide slide5">
+    </div>
+    <div class="swiper-slide slide6">
+    </div>
+    <div class="swiper-slide slide7">
+    </div>
+    <div class="swiper-slide slide8">
+    </div>
+  </div>
+<div class="swiper-pagination">
+</div>
+<div class="swiper-button-next swiper-button-white">
+</div>
+<div class="swiper-button-prev swiper-button-white">
+</div>
+
+
+</div>
 
     </section>
 
@@ -284,7 +315,12 @@
   <!-- .footer -->
 
   <!-- .wrapper -->
+  <script src="https://unpkg.com/swiper/js/swiper.js"></script>
+<script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="js/script.js">
+
+  </script>
 </body>
 
 </html>
