--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
         <!-- Where to find us Section -->
         <section id="booking">
           <h1 id="findUs">WHERE YOU CAN FIND US</h1>
+          <div id="map"></div>
         </section>
 
     <!-- Booking Section -->
@@ -250,7 +251,11 @@
   <!-- .footer -->
 
   <!-- .wrapper -->
+  <script async defer
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKzdWQBvqNehNIKmENp9FLCHz6zDf9tcM&callback=initMap">
+</script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 
 </html>
