--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </video>
       <div id="videoLogo" class="row">
         <div class="col l8 offset-l4"><img class="videoLogo show-on-large" src="img/logo-smatin.png"></div>
-        <div class="col l6 s12 offset-l3 swag">
+        <div class="col l6 s12 offset-l3 textMargin">
           <h2>Here at Salon Matin we make sure to give the best services at an affordable price</h2>
           <a class="waves-effect waves-light btn-large">Booking</a>
           <a class="waves-effect waves-light btn" id="smallBtn">Booking</a>
