image size+facebook icon

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <section id="about">
           <h1 class="aboutC">ABOUT COMPANY</h1>
           <div class="row">
-          <div class="col l7 s12 pleaseNoPadding"><img src="img/company.png" alt="" id="company"></div>
+          <div class="col l7 s12 pleaseNoPadding image-smaller"><img src="img/company.png" alt="" id="company"></div>
           <div class="col l5 s12"><h3 id="goodService">GOOD SERVICE WITH REASONABLE PRICE!</h3>
           <p id="descr">Salon MATIN in Århus C is centrally located on Frederiks Allé 176. That is, you can easily
             and quickly take public transport right to your door. We have bicycle parking and if you are
@@ -295,7 +295,7 @@
             Salon MATIN is a cheap hairdresser in Aarhus and the quality is always top notch.<br><br>
             In addition to cutting, we also offer various hair products including ID Wax as well as Attitude Wax.
             If you are looking for a good cheap hairdresser at Frederiksbjerg in the heart of Aarhus, and
-            want high quality and professional treatment, you are very welcome to contact us.
+            want high quality and professional treatment, you are very welcome to <a id="contactUs" href="#contact">contact us</a>.
           </p></div>
 
           </div>
