--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="css/style.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
   <script src="https://kit.fontawesome.com/3abf1a5f0c.js" crossorigin="anonymous"></script>
-  
+
 
 </head>
 
@@ -308,7 +308,7 @@
       <article id="about_hairdressers">
         <h1>OUR HAIRDRESSERS</h1>
         <div class="row hairdresser_desktop">
-          <div class="col s12 l4">
+          <div class="col m4 l4">
             <div class="card">
               <div class="card-image">
                 <img src="img/thaer.jpg">
@@ -320,7 +320,7 @@
               </div>
             </div>
           </div>
-          <div class="col s12 l4">
+          <div class="col m4 l4">
             <div class="card">
               <div class="card-image">
                 <img src="img/montazer.jpg">
@@ -332,7 +332,7 @@
               </div>
             </div>
           </div>
-          <div class="col s12 l4">
+          <div class="col m4 l4">
             <div class="card">
               <div class="card-image">
                 <img src="img/murad.jpg">
