--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper">
-          <a href="#!" class="brand-logo"><img src="img/logo-smatin1.svg"></a>
+         <a href="https://www.facebook.com/salonmatin?fref=ts"><img src="img/facebook.svg" class="SomeIconM1"> </a><a href="https://www.instagram.com/salon_matin/"><img src="img/instagram_icon.png" class="SomeIconM2"></a>
+         <a href="#!" class="brand-logo"><img src="img/logo-smatin1.svg"></a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
             <li><a href="sass.html">CONTACT</a></li>
@@ -41,6 +42,7 @@
     </div>
 
     <ul class="sidenav" id="mobile-demo">
+     
       <li><a href="sass.html">Sass</a></li>
       <li><a href="badges.html">Components</a></li>
       <li><a href="collapsible.html">Javascript</a></li>
@@ -63,7 +65,7 @@
           <h2>Here at Salon Matin we make sure to give the best services at an affordable price</h2>
           <a class="waves-effect waves-light btn-large">Booking</a>
           <a class="waves-effect waves-light btn" id="smallBtn">Booking</a>
-          <img src="img/facebook4.png" class="SomeIcon"> <img src="img/instagram_icon.png" class="SomeIcon2">
+          <img src="img/facebook.svg" class="SomeIcon"> <img src="img/instagram_icon.png" class="SomeIcon2">
         </div>
       </div>
     </section>
