--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--[if lt IE 9
       ]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script
     ><![endif]-->
@@ -27,9 +26,8 @@
     <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper">
-         <a href="https://www.facebook.com/salonmatin?fref=ts"><img src="img/facebook.svg" class="SomeIconM1"> </a><a href="https://www.instagram.com/salon_matin/"><img src="img/instagram.svg" class="SomeIconM2"></a>
-         <a href="#!" class="brand-logo"><img src="img/logo-smatin1.svg"></a>
-          <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><img src="img/navigation.svg"></a>
+          <a href="#!" class="brand-logo"><img src="img/logo-smatin1.svg"></a>
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
             <li><a href="sass.html">CONTACT</a></li>
             <li><a href="badges.html">PRICES & SERVICES</a></li>
@@ -43,7 +41,6 @@
     </div>
 
     <ul class="sidenav" id="mobile-demo">
-
       <li><a href="sass.html">Sass</a></li>
       <li><a href="badges.html">Components</a></li>
       <li><a href="collapsible.html">Javascript</a></li>
@@ -66,7 +63,7 @@
           <h2>Here at Salon Matin we make sure to give the best services at an affordable price</h2>
           <a class="waves-effect waves-light btn-large">Booking</a>
           <a class="waves-effect waves-light btn" id="smallBtn">Booking</a>
-          <a href="https://www.facebook.com/salonmatin?fref=ts"><img src="img/facebook.svg" class="SomeIcon"> </a><a href="https://www.instagram.com/salon_matin/"><img src="img/instagram.svg" class="SomeIcon2"></a>
+          <img src="img/facebokk_icon.png" class="SomeIcon"> <img src="img/instagram_icon.png" class="SomeIcon2">
         </div>
       </div>
     </section>
