--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </video>
       <div id="videoLogo" class="row">
         <div class="col l8 offset-l4"><img class="videoLogo show-on-large" src="img/logo-smatin.png"></div>
-        <div class="col l6 s12 offset-l3 swag">
+        <div class="col l6 s12 offset-l3 textMargin">
           <h2>Here at Salon Matin we make sure to give the best services at an affordable price</h2>
           <a class="waves-effect waves-light btn-large">Booking</a>
           <a class="waves-effect waves-light btn" id="smallBtn">Booking</a>
@@ -288,21 +288,19 @@
       <article id="about_company">
         <h1 class="aboutC">ABOUT COMPANY</h1>
         <div class="row">
-          <div class="col l7 s12 pleaseNoPadding"><img src="img/company.png" alt="" id="company"></div>
-          <div class="col l5 s12">
-            <h3 id="goodService">GOOD SERVICE WITH REASONABLE PRICE!</h3>
-            <p id="descr">Salon MATIN in Århus C is centrally located on Frederiks Allé 176. That is, you can easily
-              and quickly take public transport right to your door. We have bicycle parking and if you are
-              in the car there is ample opportunity for free parking close to Salon MATIN. <br><br>
-              We offer men's, women's and children's haircuts, and strive to provide the best service by
-              listening to your wishes, and are happy to make suggestions for the haircut. <br><br>Our greatest reward
-              is the joy our customers exude as they leave the salon with a result they are happy and proud of.
-              Salon MATIN is a cheap hairdresser in Aarhus and the quality is always top notch.<br><br>
-              In addition to cutting, we also offer various hair products including ID Wax as well as Attitude Wax.
-              If you are looking for a good cheap hairdresser at Frederiksbjerg in the heart of Aarhus, and
-              want high quality and professional treatment, you are very welcome to contact us.
-            </p>
-          </div>
+        <div class="col l7 s12 pleaseNoPadding image-smaller"><img src="img/company.png" alt="" id="company"></div>
+        <div class="col l5 s12"><h3 id="goodService">GOOD SERVICE WITH REASONABLE PRICE!</h3>
+        <p id="descr">Salon MATIN in Århus C is centrally located on Frederiks Allé 176. That is, you can easily
+          and quickly take public transport right to your door. We have bicycle parking and if you are
+          in the car there is ample opportunity for free parking close to Salon MATIN. <br><br>
+          We offer men's, women's and children's haircuts, and strive to provide the best service by
+          listening to your wishes, and are happy to make suggestions for the haircut. <br><br>Our greatest reward
+          is the joy our customers exude as they leave the salon with a result they are happy and proud of.
+          Salon MATIN is a cheap hairdresser in Aarhus and the quality is always top notch.<br><br>
+          In addition to cutting, we also offer various hair products including ID Wax as well as Attitude Wax.
+          If you are looking for a good cheap hairdresser at Frederiksbjerg in the heart of Aarhus, and
+          want high quality and professional treatment, you are very welcome to <a id="contactUs" href="#contact">contact us</a>.
+        </p></div>
         </div>
       </article>
       <article id="about_hairdressers">
