Our barbers working

--- a/index.html
+++ b/index.html
@@ -349,21 +349,21 @@
 
         <div class="swiper-container">
           <div class="swiper-wrapper">
-            <div class="swiper-slide slide9">
-              <h3 class="slider_mobile">Thaer Alwan</h3>
+            <div class="swiper-slide slide9"><div class="mobileText"><h3 class="slider_mobile">Thaer Alwan</h3>
               <h5>Founder</h5>
               <p>Specialized in scissors</p>
             </div>
-            <div class="swiper-slide slide10">
+              </div>
+            <div class="swiper-slide slide10"><div class="mobileText">
               <h3 class="slider_mobile">Montazer Alwan</h3>
               <h5>COFounder</h5>
               <p>Specialized in skinfades</p>
-            </div>
-            <div class="swiper-slide slide11">
+                </div></div>
+            <div class="swiper-slide slide11"><div class="mobileText">
               <h3 class="slider_mobile">Murad AlGezir</h3>
               <h5>Hairdresser</h5>
               <p>Specialized in barbering</p>
-            </div>
+                </div></div>
           </div>
           <div class="swiper-pagination">
           </div>
